# Loquetier

./: .gitignore  .gitmodules  README.md
examples/: run_mixed.py
kernel_src/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
kernel_src/csrc/: loquetier_ops.cc
kernel_src/csrc/flashinfer_adapter/: flashinfer_all.cu  flashinfer_config.h
kernel_src/csrc/rms_norm/: rms_norm.h  rms_norm_cutlass.cu
kernel_src/csrc/smlm_forward/: smlm_forward.h  smlm_forward_cutlass.cu  smlm_forward_cutlass.cuh
kernel_src/src/loquetier/: __init__.py
kernel_src/src/loquetier/ops/: __init__.py
kernel_src/src/loquetier/utils/: __init__.py
src/loquetier_src/: __init__.py  enums.py  kernel_utils.py  model_generation.py  model_workflow.py  virtual_model.py
src/loquetier_src/models/: __init__.py  mixed_llama.py  mixed_lora.py
test/: test_llama.py  test_mixed.py
tests/: interval_generator.py  test_ft_lorahub.py  test_infer_ft_lorahub.py  test_infer_lorahub.py
tests/configs/: finetune_1_lora.json  finetune_1_lora_partial.json  finetune_2_lora.json  finetune_2_lora_partial.json  inference_1_lora.json  inference_4_lora.json
virtual_model/: __init__.py  enums.py  kernel_utils.py  mixed_lora.py  model_workflow.py  trainer_utils.py  utils.py
virtual_model/models/: mixed_llama.py  model_generation.py
